# test-django-react.web

./: .gitignore  README.md  pyproject.toml
backend/: .dockerignore  .gitignore  pyproject.toml
backend/src/: manage.py
backend/src/accounts/: views.py
backend/src/core/: models.py  views.py
backend/src/core/templates/: inertia_base.html
backend/src/example/: urls.py  views.py
backend/src/global/: settings.py  urls.py
backend/src/posts/migrations/: 0001_initial.py
backend/src/templates/: inertia_base.html
backend/src/users/: account_adapter.py  admin.py  allauth.py  views.py
backend/src/users/migrations/: 0001_initial.py
backend/src/users/models/: users.py
backend/src/utilities/: uuidv7.py
frontend/: .dockerignore  .prettierignore  .prettierrc  package-lock.json  package.json  vite.config.ts
frontend/src/: main.css  main.tsx
frontend/src/pages/accounts/: login.tsx
frontend/src/pages/core/top/: index.tsx
frontend/src/pages/example/example-1/: index.tsx
frontend/src/pages/example/example-2/: header.css  header.tsx  home.css  index.tsx  sub1.tsx
frontend/src/pages/users/auth/: login.tsx
frontend/src/utilities/django/: allauth.ts  cstf.ts
src/core/: settings.py
src/frontend/: package-lock.json  package.json  vite.config.ts
src/frontend/src/: main.tsx
src/frontend/src/pages/Index/: index.tsx
src/global/: asgi.py  settings.py  urls.py
