[project]
name = "test-django-react-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-allauth>=65.7.0",
    "django-environ>=0.12.0",
    "django-storages>=1.14.6",
    "django-vite>=3.1.0",
    "inertia-django>=1.2.0",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.2",
    "rules>=3.5",
]

[tool.ruff]
target-version = "py312"
exclude = [
    ".venv",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "B",   # bugbear
    "W", # pyflakes (warning)
    "B9",
    "I",   # isort
    "RUF",
]
ignore = [
    "E501", # line too long
]

[tool.ruff.format]
